--- a/proyecto1/pom.xml
+++ b/proyecto1/pom.xml
@@ -5,7 +5,7 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>mx.unam.ciencias.icc</groupId>
-  <artifactId>practica</artifactId>
+  <artifactId>proyecto1</artifactId>
   <version>ICC</version>
   <packaging>jar</packaging>
 
@@ -69,7 +69,7 @@
 	<configuration>
 	  <archive>
 	    <manifest>
-	      <mainClass>mx.unam.ciencias.icc.Practica5</mainClass>
+	      <mainClass>mx.unam.ciencias.icc.Proyecto1</mainClass>
 	    </manifest>
 	  </archive>
 	</configuration>
@@ -89,7 +89,7 @@
 
     </plugins>
 
-    <finalName>practica5</finalName>
+    <finalName>proyecto1</finalName>
   </build>
 
   <reporting>
